Revert "rebuilt docs"
This reverts commit ecc6e38ff0a30cd4641aa28c3056bb0a6cd914fe.

Conflicts:
	Features/assortativity.html
	Features/basic_stats.html
	Features/centrality.html
	Features/chemical_theory.html
	Features/cliques.html
	Features/clustering.html
	Features/communities.html
	Features/components.html
	Features/core_number.html
	Features/cycle_basis.html
	Features/distance_measures.html
	Features/dominating_sets.html
	Features/efficiency.html
	Features/eulerian.html
	Features/independent_sets.html
	Features/k_components.html
	Features/link_analysis_hits.html
	Features/maximal_matching.html
	Features/minimum_cuts.html
	Features/node_clique_number.html
	Features/node_connectivity.html
	Features/node_features.html
	Features/rich_club.html
	Features/scale_free.html
	Features/shortest_paths.html
	Features/small_worldness.html
	Features/spectrum.html
	Features/structural_holes.html
	Features/vitality.html
	_modules/hcga/extraction.html
	_modules/hcga/feature_class.html
	_modules/hcga/features/assortativity.html
	_modules/hcga/features/basic_stats.html
	_modules/hcga/features/centralities_basic.html
	_modules/hcga/features/chemical_theory.html
	_modules/hcga/features/cliques.html
	_modules/hcga/features/clustering.html
	_modules/hcga/features/communities_asyn.html
	_modules/hcga/features/communities_bisection.html
	_modules/hcga/features/communities_labelprop.html
	_modules/hcga/features/communities_modularity.html
	_modules/hcga/features/components.html
	_modules/hcga/features/core_number.html
	_modules/hcga/features/cycle_basis.html
	_modules/hcga/features/distance_measures.html
	_modules/hcga/features/dominating_sets.html
	_modules/hcga/features/efficiency.html
	_modules/hcga/features/eulerian.html
	_modules/hcga/features/independent_sets.html
	_modules/hcga/features/k_components.html
	_modules/hcga/features/link_analysis_hits.html
	_modules/hcga/features/maximal_matching.html
	_modules/hcga/features/minimum_cuts.html
	_modules/hcga/features/node_clique_number.h

--- a/_modules/hcga/analysis.html
+++ b/_modules/hcga/analysis.html
@@ -49,8 +49,8 @@
 <span class="kn">from</span> <span class="nn">sklearn.preprocessing</span> <span class="kn">import</span> <span class="n">StandardScaler</span>
 <span class="kn">from</span> <span class="nn">tqdm</span> <span class="kn">import</span> <span class="n">tqdm</span>
 
-<span class="kn">from</span> <span class="nn">hcga.io</span> <span class="kn">import</span> <span class="n">load_fitted_model</span><span class="p">,</span> <span class="n">save_fitted_model</span>
-<span class="kn">from</span> <span class="nn">hcga.plotting</span> <span class="kn">import</span> <span class="n">plot_analysis</span><span class="p">,</span> <span class="n">plot_prediction</span>
+<span class="kn">from</span> <span class="nn">.io</span> <span class="kn">import</span> <span class="n">load_fitted_model</span><span class="p">,</span> <span class="n">save_fitted_model</span>
+<span class="kn">from</span> <span class="nn">.plotting</span> <span class="kn">import</span> <span class="n">plot_analysis</span><span class="p">,</span> <span class="n">plot_prediction</span>
 
 <span class="n">L</span> <span class="o">=</span> <span class="n">logging</span><span class="o">.</span><span class="n">getLogger</span><span class="p">(</span><span class="vm">__name__</span><span class="p">)</span>
 <span class="n">logging</span><span class="o">.</span><span class="n">basicConfig</span><span class="p">(</span><span class="n">level</span><span class="o">=</span><span class="n">os</span><span class="o">.</span><span class="n">environ</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s2">&quot;LOGLEVEL&quot;</span><span class="p">,</span> <span class="s2">&quot;INFO&quot;</span><span class="p">))</span>
