--- a/genindex.html
+++ b/genindex.html
@@ -34,7 +34,8 @@
 <h1 id="index">Index</h1>
 
 <div class="genindex-jumpbox">
- <a href="#_"><strong>_</strong></a>
+ <a href="#Symbols"><strong>Symbols</strong></a>
+ | <a href="#_"><strong>_</strong></a>
  | <a href="#A"><strong>A</strong></a>
  | <a href="#B"><strong>B</strong></a>
  | <a href="#C"><strong>C</strong></a>
@@ -56,6 +57,321 @@
  | <a href="#W"><strong>W</strong></a>
  
 </div>
+<h2 id="Symbols">Symbols</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    --analysis-type &lt;analysis_type&gt;
+
+      <ul>
+        <li><a href="app.html#cmdoption-cli-feature_analysis-analysis-type">cli-feature_analysis command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --connected
+
+      <ul>
+        <li><a href="app.html#cmdoption-cli-extract_features-connected">cli-extract_features command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --feature-file &lt;feature_file&gt;
+
+      <ul>
+        <li><a href="app.html#cmdoption-cli-feature_analysis-ff">cli-feature_analysis command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --folder &lt;folder&gt;
+
+      <ul>
+        <li><a href="app.html#cmdoption-cli-get_data-f">cli-get_data command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --graph-removal &lt;graph_removal&gt;
+
+      <ul>
+        <li><a href="app.html#cmdoption-cli-feature_analysis-graph-removal">cli-feature_analysis command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --interpretability &lt;interpretability&gt;
+
+      <ul>
+        <li><a href="app.html#cmdoption-cli-feature_analysis-i">cli-feature_analysis command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --kfold
+
+      <ul>
+        <li><a href="app.html#cmdoption-cli-feature_analysis-kfold">cli-feature_analysis command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --max-feats-plot &lt;max_feats_plot&gt;
+
+      <ul>
+        <li><a href="app.html#cmdoption-cli-feature_analysis-max-feats-plot">cli-feature_analysis command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --mode &lt;mode&gt;
+
+      <ul>
+        <li><a href="app.html#cmdoption-cli-extract_features-m">cli-extract_features command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --model &lt;model&gt;
+
+      <ul>
+        <li><a href="app.html#cmdoption-cli-feature_analysis-m">cli-feature_analysis command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --n-repeats &lt;n_repeats&gt;
+
+      <ul>
+        <li><a href="app.html#cmdoption-cli-feature_analysis-n-repeats">cli-feature_analysis command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --n-splits &lt;n_splits&gt;
+
+      <ul>
+        <li><a href="app.html#cmdoption-cli-feature_analysis-n-splits">cli-feature_analysis command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --n-workers &lt;n_workers&gt;
+
+      <ul>
+        <li><a href="app.html#cmdoption-cli-extract_features-n">cli-extract_features command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --no-connected
+
+      <ul>
+        <li><a href="app.html#cmdoption-cli-extract_features-connected">cli-extract_features command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --no-kfold
+
+      <ul>
+        <li><a href="app.html#cmdoption-cli-feature_analysis-kfold">cli-feature_analysis command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --no-node-feat
+
+      <ul>
+        <li><a href="app.html#cmdoption-cli-extract_features-node-feat">cli-extract_features command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --no-norm
+
+      <ul>
+        <li><a href="app.html#cmdoption-cli-extract_features-norm">cli-extract_features command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --no-plot
+
+      <ul>
+        <li><a href="app.html#cmdoption-cli-feature_analysis-p">cli-feature_analysis command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --no-reduce-set
+
+      <ul>
+        <li><a href="app.html#cmdoption-cli-feature_analysis-reduce-set">cli-feature_analysis command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --no-runtimes
+
+      <ul>
+        <li><a href="app.html#cmdoption-cli-extract_features-runtimes">cli-extract_features command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --node-feat
+
+      <ul>
+        <li><a href="app.html#cmdoption-cli-extract_features-node-feat">cli-extract_features command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --norm
+
+      <ul>
+        <li><a href="app.html#cmdoption-cli-extract_features-norm">cli-extract_features command line option</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    --output-file &lt;output_file&gt;
+
+      <ul>
+        <li><a href="app.html#cmdoption-cli-extract_features-of">cli-extract_features command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --plot
+
+      <ul>
+        <li><a href="app.html#cmdoption-cli-feature_analysis-p">cli-feature_analysis command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --reduce-set
+
+      <ul>
+        <li><a href="app.html#cmdoption-cli-feature_analysis-reduce-set">cli-feature_analysis command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --reduced-set-max-correlation &lt;reduced_set_max_correlation&gt;
+
+      <ul>
+        <li><a href="app.html#cmdoption-cli-feature_analysis-reduced-set-max-correlation">cli-feature_analysis command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --reduced-set-size &lt;reduced_set_size&gt;
+
+      <ul>
+        <li><a href="app.html#cmdoption-cli-feature_analysis-reduced-set-size">cli-feature_analysis command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --results-folder &lt;results_folder&gt;
+
+      <ul>
+        <li><a href="app.html#cmdoption-cli-extract_features-rf">cli-extract_features command line option</a>
+</li>
+        <li><a href="app.html#cmdoption-cli-feature_analysis-rf">cli-feature_analysis command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --runtimes
+
+      <ul>
+        <li><a href="app.html#cmdoption-cli-extract_features-runtimes">cli-extract_features command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --stats-level &lt;stats_level&gt;
+
+      <ul>
+        <li><a href="app.html#cmdoption-cli-extract_features-sl">cli-extract_features command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --timeout &lt;timeout&gt;
+
+      <ul>
+        <li><a href="app.html#cmdoption-cli-extract_features-timeout">cli-extract_features command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --verbose
+
+      <ul>
+        <li><a href="app.html#cmdoption-cli-v">cli command line option</a>
+</li>
+      </ul></li>
+      <li>
+    -f
+
+      <ul>
+        <li><a href="app.html#cmdoption-cli-get_data-f">cli-get_data command line option</a>
+</li>
+      </ul></li>
+      <li>
+    -ff
+
+      <ul>
+        <li><a href="app.html#cmdoption-cli-feature_analysis-ff">cli-feature_analysis command line option</a>
+</li>
+      </ul></li>
+      <li>
+    -i
+
+      <ul>
+        <li><a href="app.html#cmdoption-cli-feature_analysis-i">cli-feature_analysis command line option</a>
+</li>
+      </ul></li>
+      <li>
+    -m
+
+      <ul>
+        <li><a href="app.html#cmdoption-cli-extract_features-m">cli-extract_features command line option</a>
+</li>
+        <li><a href="app.html#cmdoption-cli-feature_analysis-m">cli-feature_analysis command line option</a>
+</li>
+      </ul></li>
+      <li>
+    -n
+
+      <ul>
+        <li><a href="app.html#cmdoption-cli-extract_features-n">cli-extract_features command line option</a>
+</li>
+      </ul></li>
+      <li>
+    -np
+
+      <ul>
+        <li><a href="app.html#cmdoption-cli-feature_analysis-p">cli-feature_analysis command line option</a>
+</li>
+      </ul></li>
+      <li>
+    -of
+
+      <ul>
+        <li><a href="app.html#cmdoption-cli-extract_features-of">cli-extract_features command line option</a>
+</li>
+      </ul></li>
+      <li>
+    -p
+
+      <ul>
+        <li><a href="app.html#cmdoption-cli-feature_analysis-p">cli-feature_analysis command line option</a>
+</li>
+      </ul></li>
+      <li>
+    -rf
+
+      <ul>
+        <li><a href="app.html#cmdoption-cli-extract_features-rf">cli-extract_features command line option</a>
+</li>
+        <li><a href="app.html#cmdoption-cli-feature_analysis-rf">cli-feature_analysis command line option</a>
+</li>
+      </ul></li>
+      <li>
+    -sl
+
+      <ul>
+        <li><a href="app.html#cmdoption-cli-extract_features-sl">cli-extract_features command line option</a>
+</li>
+      </ul></li>
+      <li>
+    -v
+
+      <ul>
+        <li><a href="app.html#cmdoption-cli-v">cli command line option</a>
+</li>
+      </ul></li>
+  </ul></td>
+</tr></table>
+
 <h2 id="_">_</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -177,6 +493,126 @@
 </li>
       <li><a href="analysis.html#hcga.analysis.classify_pairwise">classify_pairwise() (in module hcga.analysis)</a>
 </li>
+      <li>
+    cli command line option
+
+      <ul>
+        <li><a href="app.html#cmdoption-cli-v">--verbose</a>
+</li>
+        <li><a href="app.html#cmdoption-cli-v">-v</a>
+</li>
+      </ul></li>
+      <li>
+    cli-extract_features command line option
+
+      <ul>
+        <li><a href="app.html#cmdoption-cli-extract_features-connected">--connected</a>
+</li>
+        <li><a href="app.html#cmdoption-cli-extract_features-m">--mode &lt;mode&gt;</a>
+</li>
+        <li><a href="app.html#cmdoption-cli-extract_features-n">--n-workers &lt;n_workers&gt;</a>
+</li>
+        <li><a href="app.html#cmdoption-cli-extract_features-connected">--no-connected</a>
+</li>
+        <li><a href="app.html#cmdoption-cli-extract_features-node-feat">--no-node-feat</a>
+</li>
+        <li><a href="app.html#cmdoption-cli-extract_features-norm">--no-norm</a>
+</li>
+        <li><a href="app.html#cmdoption-cli-extract_features-runtimes">--no-runtimes</a>
+</li>
+        <li><a href="app.html#cmdoption-cli-extract_features-node-feat">--node-feat</a>
+</li>
+        <li><a href="app.html#cmdoption-cli-extract_features-norm">--norm</a>
+</li>
+        <li><a href="app.html#cmdoption-cli-extract_features-of">--output-file &lt;output_file&gt;</a>
+</li>
+        <li><a href="app.html#cmdoption-cli-extract_features-rf">--results-folder &lt;results_folder&gt;</a>
+</li>
+        <li><a href="app.html#cmdoption-cli-extract_features-runtimes">--runtimes</a>
+</li>
+        <li><a href="app.html#cmdoption-cli-extract_features-sl">--stats-level &lt;stats_level&gt;</a>
+</li>
+        <li><a href="app.html#cmdoption-cli-extract_features-timeout">--timeout &lt;timeout&gt;</a>
+</li>
+        <li><a href="app.html#cmdoption-cli-extract_features-m">-m</a>
+</li>
+        <li><a href="app.html#cmdoption-cli-extract_features-n">-n</a>
+</li>
+        <li><a href="app.html#cmdoption-cli-extract_features-of">-of</a>
+</li>
+        <li><a href="app.html#cmdoption-cli-extract_features-rf">-rf</a>
+</li>
+        <li><a href="app.html#cmdoption-cli-extract_features-sl">-sl</a>
+</li>
+        <li><a href="app.html#cmdoption-cli-extract_features-arg-DATASET">DATASET</a>
+</li>
+      </ul></li>
+      <li>
+    cli-feature_analysis command line option
+
+      <ul>
+        <li><a href="app.html#cmdoption-cli-feature_analysis-analysis-type">--analysis-type &lt;analysis_type&gt;</a>
+</li>
+        <li><a href="app.html#cmdoption-cli-feature_analysis-ff">--feature-file &lt;feature_file&gt;</a>
+</li>
+        <li><a href="app.html#cmdoption-cli-feature_analysis-graph-removal">--graph-removal &lt;graph_removal&gt;</a>
+</li>
+        <li><a href="app.html#cmdoption-cli-feature_analysis-i">--interpretability &lt;interpretability&gt;</a>
+</li>
+        <li><a href="app.html#cmdoption-cli-feature_analysis-kfold">--kfold</a>
+</li>
+        <li><a href="app.html#cmdoption-cli-feature_analysis-max-feats-plot">--max-feats-plot &lt;max_feats_plot&gt;</a>
+</li>
+        <li><a href="app.html#cmdoption-cli-feature_analysis-m">--model &lt;model&gt;</a>
+</li>
+        <li><a href="app.html#cmdoption-cli-feature_analysis-n-repeats">--n-repeats &lt;n_repeats&gt;</a>
+</li>
+        <li><a href="app.html#cmdoption-cli-feature_analysis-n-splits">--n-splits &lt;n_splits&gt;</a>
+</li>
+        <li><a href="app.html#cmdoption-cli-feature_analysis-kfold">--no-kfold</a>
+</li>
+        <li><a href="app.html#cmdoption-cli-feature_analysis-p">--no-plot</a>
+</li>
+        <li><a href="app.html#cmdoption-cli-feature_analysis-reduce-set">--no-reduce-set</a>
+</li>
+        <li><a href="app.html#cmdoption-cli-feature_analysis-p">--plot</a>
+</li>
+        <li><a href="app.html#cmdoption-cli-feature_analysis-reduce-set">--reduce-set</a>
+</li>
+        <li><a href="app.html#cmdoption-cli-feature_analysis-reduced-set-max-correlation">--reduced-set-max-correlation &lt;reduced_set_max_correlation&gt;</a>
+</li>
+        <li><a href="app.html#cmdoption-cli-feature_analysis-reduced-set-size">--reduced-set-size &lt;reduced_set_size&gt;</a>
+</li>
+        <li><a href="app.html#cmdoption-cli-feature_analysis-rf">--results-folder &lt;results_folder&gt;</a>
+</li>
+        <li><a href="app.html#cmdoption-cli-feature_analysis-ff">-ff</a>
+</li>
+        <li><a href="app.html#cmdoption-cli-feature_analysis-i">-i</a>
+</li>
+        <li><a href="app.html#cmdoption-cli-feature_analysis-m">-m</a>
+</li>
+        <li><a href="app.html#cmdoption-cli-feature_analysis-p">-np</a>
+</li>
+        <li><a href="app.html#cmdoption-cli-feature_analysis-p">-p</a>
+</li>
+        <li><a href="app.html#cmdoption-cli-feature_analysis-rf">-rf</a>
+</li>
+        <li><a href="app.html#cmdoption-cli-feature_analysis-arg-DATASET">DATASET</a>
+</li>
+      </ul></li>
+      <li>
+    cli-get_data command line option
+
+      <ul>
+        <li><a href="app.html#cmdoption-cli-get_data-f">--folder &lt;folder&gt;</a>
+</li>
+        <li><a href="app.html#cmdoption-cli-get_data-f">-f</a>
+</li>
+        <li><a href="app.html#cmdoption-cli-get_data-arg-DATASET_NAME">DATASET_NAME</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="Features/cliques.html#hcga.features.cliques.clique_sizes">clique_sizes() (in module hcga.features.cliques)</a>
 
       <ul>
@@ -273,8 +709,6 @@
         <li><a href="Features/vitality.html#hcga.features.vitality.Vitality.compute_features">(hcga.features.vitality.Vitality method)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="feature_class.html#hcga.feature_class.FeatureClass.compute_normalize_features">compute_normalize_features() (hcga.feature_class.FeatureClass method)</a>
 </li>
       <li><a href="Features/components.html#hcga.features.components.condensation_edges">condensation_edges() (in module hcga.features.components)</a>
@@ -297,12 +731,28 @@
 <h2 id="D">D</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    DATASET
+
+      <ul>
+        <li><a href="app.html#cmdoption-cli-extract_features-arg-DATASET">cli-extract_features command line option</a>
+</li>
+        <li><a href="app.html#cmdoption-cli-feature_analysis-arg-DATASET">cli-feature_analysis command line option</a>
+</li>
+      </ul></li>
+      <li>
+    DATASET_NAME
+
+      <ul>
+        <li><a href="app.html#cmdoption-cli-get_data-arg-DATASET_NAME">cli-get_data command line option</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="Features/centrality.html#hcga.features.centralities_basic.degree_centrality">degree_centrality() (in module hcga.features.centralities_basic)</a>
 </li>
       <li><a href="Features/basic_stats.html#hcga.features.basic_stats.density">density() (in module hcga.features.basic_stats)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="Features/basic_stats.html#hcga.features.basic_stats.diameter">diameter() (in module hcga.features.basic_stats)</a>
 </li>
       <li><a href="Features/distance_measures.html#hcga.features.distance_measures.DistanceMeasures">DistanceMeasures (class in hcga.features.distance_measures)</a>
